build: 切换到 rolldown 并添加 fastify 依赖
迁移构建流程为 rolldown：新增 rolldown.config.ts（注入 shebang 以支持可执行 CLI，外部排除 node: 原生模块、protobufjs 与 fastify），并将 package.json 的 dev/build 脚本改为使用 rolldown。调整 package.json 来发布 dist（files/bin/main 指向 ./dist/index.js）、加入 rolldown 开发依赖和 fastify 运行时依赖，更新 packageManager 版本与许可证为 AGPL-3.0-or-later。更新 pnpm-lock.yaml 以包含 rolldown、fastify 及其相关依赖与可选绑定。修改 tsconfig.json，新增 allowImportingTsExtensions 与 emitDeclarationOnly（配合 tsc 生成声明），并保留类型检查脚本。更新 .gitignore，添加 captcha.png。

--- a/package.json
+++ b/package.json
@@ -4,31 +4,38 @@
     "description": "",
     "type": "module",
     "scripts": {
-        "dev": "tsx watch src/index.ts",
-        "build": "tsc",
-        "start": "node dist/index.js",
-        "start:env": "node --env-file=.env dist/index.js",
+        "dev": "rolldown -c rolldown.config.ts --watch",
+        "build": "rolldown -c rolldown.config.ts && tsc",
+        "start": "node ./dist/index.js",
+        "start:env": "node --env-file=.env ./dist/index.js",
         "typecheck": "tsc --noEmit"
     },
-    "main": "dist/index.js",
-    "typings": "dist/index.d.ts",
+    "files": [
+        "dist"
+    ],
+    "bin": {
+        "nanoyunhu": "./dist/index.js"
+    },
+    "main": "./dist/index.js",
     "author": "TASA-Ed Studio",
     "contributors": [
         "ccd2s <tasaedem@outlook.com>"
     ],
-    "license": "GPL-3.0",
+    "license": "AGPL-3.0-or-later",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/TASA-Ed/nanoyunhu.git"
     },
     "homepage": "https://www.tasaed.top",
-    "packageManager": "pnpm@10.30.0",
+    "packageManager": "pnpm@10.30.1",
     "devDependencies": {
         "@types/node": "^25.2.3",
+        "rolldown": "1.0.0-rc.5",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3"
     },
     "dependencies": {
+        "fastify": "^5.7.4",
         "protobufjs": "^8.0.0"
     }
 }
