--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"packageManager": "pnpm@10.30.1",
 	"devDependencies": {
 		"@types/node": "^25.2.3",
+		"@types/ws": "^8.18.1",
 		"rolldown": "1.0.0-rc.5",
 		"tsx": "^4.21.0",
 		"typescript": "^5.9.3"
@@ -37,6 +38,7 @@
 	"dependencies": {
 		"fastify": "^5.7.4",
 		"protobufjs": "^8.0.0",
-		"zod": "^4.3.6"
+		"zod": "^4.3.6",
+		"ws": "^8.19.0"
 	}
 }
