--- a/package.json
+++ b/package.json
@@ -27,11 +27,10 @@
     "url": "git+https://github.com/TASA-Ed/nanoyunhu.git"
   },
   "homepage": "https://www.tasaed.top",
-  "packageManager": "pnpm@10.30.1",
   "devDependencies": {
     "@types/node": "^25.2.3",
     "@types/ws": "^8.18.1",
-    "rolldown": "1.0.0-rc.5",
+    "rolldown": "1.0.0-rc.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   },
@@ -40,5 +39,6 @@
     "protobufjs": "^8.0.0",
     "zod": "^4.3.6",
     "ws": "^8.19.0"
-  }
+  },
+  "packageManager": "pnpm@10.30.3"
 }
