--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "rolldown -c rolldown.config.ts && tsc",
     "start": "node ./dist/index.js",
     "start:env": "node --env-file=.env ./dist/index.js",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "lint": "oxlint",
+    "lint:fix": "oxlint --fix"
   },
   "files": [
     "dist"
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@types/node": "^25.2.3",
     "@types/ws": "^8.18.1",
+    "oxlint": "^1.50.0",
     "rolldown": "1.0.0-rc.6",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
@@ -37,8 +40,8 @@
   "dependencies": {
     "fastify": "^5.7.4",
     "protobufjs": "^8.0.0",
-    "zod": "^4.3.6",
-    "ws": "^8.19.0"
+    "ws": "^8.19.0",
+    "zod": "^4.3.6"
   },
   "packageManager": "pnpm@10.30.3"
 }
